test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/different-mutate-existing-values/mutated-secret.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    foo: dictionary-3
  name: test-secret-3
  namespace: staging-3
