test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/different-mutate-existing-values/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    cloud.platformzero.com/serviceClass: xl2
  labels:
    app-type: corp
  name: staging-3
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    cloud.platformzero.com/serviceClass: xl2
  labels:
    app-type: corp
  name: staging-2
