test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/different-mutate-existing-values/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-post-mutation-create-policy
spec:
  rules:
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
          names:
          - dictionary-3
          namespaces:
          - staging-3
    mutate:
      mutateExistingOnPolicyUpdate: true
      patchStrategicMerge:
        metadata:
          labels:
            foo: '{{ request.object.metadata.name }}'
      targets:
      - apiVersion: v1
        kind: Secret
        name: test-secret-3
        namespace: '{{ request.object.metadata.namespace }}'
    name: mutate-secret-on-policy-create
  - match:
      any:
      - resources:
          kinds:
          - ConfigMap
          names:
          - dictionary-2
          namespaces:
          - staging-2
    mutate:
      mutateExistingOnPolicyUpdate: false
      patchStrategicMerge:
        metadata:
          labels:
            foo: '{{ request.object.metadata.name }}'
      targets:
      - apiVersion: v1
        kind: Secret
        name: test-secret-2
        namespace: '{{ request.object.metadata.namespace }}'
    name: disable-mutate-existing
