test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/different-mutate-existing-values/secrets.yaml
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-3
  namespace: staging-3
type: Opaque
---
apiVersion: v1
data:
  foo: YmFy
kind: Secret
metadata:
  name: test-secret-2
  namespace: staging-2
type: Opaque
