test/conformance/chainsaw/mutate/clusterpolicy/standard/existing/onpolicyupdate/different-mutate-existing-values/mutated-secret-error.yaml
apiVersion: v1
kind: Secret
metadata:
  labels:
    foo: dictionary-2
  name: test-secret-2
  namespace: staging-2
